<?xml version="1.0"?>
<package>
  <name>turtlebot_slam_testing</name>
  <version>1.0.0</version>
  <description>TODO</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
